# try-poetry-project

./: README.md  pyproject.toml
try_poetry_project/: main.py
