[tool.poetry]
name = "try-poetry-project"
version = "0.1.0"
description = ""
authors = ["3sdd <56486103+3sdd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "try_poetry_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
